# mlb_stats

./: .gitignore  README.md  database.py  parse_data.py  parse_helper.py  pyproject.toml
databases/: detailed_mlb_game_info.sql  game_day_player_season_stats_batting_performance.sql  game_day_player_season_stats_fielding_performance.sql  game_day_player_season_stats_pitching_performance.sql  game_inning.sql  game_player_info.sql  game_summaries.sql  game_team_totals.sql  mlb_game_summary.sql  play_by_play.sql  play_outcome.sql  player_game_batting_performance.sql  player_game_fielding_performance.sql  player_game_pitching_performance.sql  team_game_batting_stats.sql  team_game_fielding_stats.sql  team_game_pitching_stats.sql  teams.sql
example_json/: get_box_score.json  get_line_score.json  get_live_feed.json  get_play_by_play.json  get_player.json  get_roster.json  get_schedule.json  get_standings.json  get_team_stats.json  get_teams.json  get_win_probability.json  output.json  output2.json  stats_api.py
